--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,44 @@
 /*Near U - style.css*/
 
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
+
 body{
   background-color: #111;
+  color: #eee;
+  font-family: 'Roboto Slab', serif;
+}
+
+h1{
+  margin-top: 0;
+  margin-bottom: .25em;
+  padding-top: 10px;
+  font-size: 250%;
+}
+
+h2{
+  margin-bottom: 0;
+}
+
+h3{
+  margin-top: 0;
+  margin-bottom: .25em;
+  padding-top: 10px;
+  font-size: 175%;
+}
+
+h4{
+  margin-bottom: .25em;
 }
 
 header{
   height: 5em;
-  background-color: yellow;
-  margin-bottom: .25em;
+  background-color: #333;
+  margin-bottom: 10px;
 }
 
 .container{
   max-width: 500px;
+  min-width: 325px;
   margin: 0 auto;
 }
 
@@ -19,40 +46,98 @@ header{
   min-height: 200px;
   width: 100%;
   margin-bottom: 10px;
+  text-align: center;
   clear: both;
 }
 
 .section-small{
   min-height: 150px;
-  width: 50%;
+  margin-right: 1%;
+  width: 49%;
+  text-align: center;
   float: left;
+  clear: none;
 }
 
 .section-small + .section-small{
-  width: 50%;
+  width: 49%;
+  margin-left: 1%;
+  margin-right: 0;
   float: right;
-  clear: right;
 }
 
 #city{
-  background-color: white;
+  background-color: #333;
+}
+
+#city>h1{
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
+#city>p{
+  font-size: 75%;
+  margin-bottom: 2px;
+  margin-top: 2px;
 }
 
 #time{
-  background-color:blue;
-}
-
-#loc{
-  background-color: red;
+  background-color:#333;
 }
 
 #weather{
-  background-color: green;
+  background-color: #333;
 }
 
 #map{
+  background-color: #333;
 }
 
-#restaurant{
-  background-color: pink;
+#restaurant {
+  background-color: #333;
+  color: #eee;
+  padding-bottom: 10px;
+}
+
+#restaurant>h4{
+  margin-bottom: .1em;
+  margin-top: .25em;
+}
+
+#restaurant>p{
+  font-size: 100%;
+  margin-top: .25em;
+  margin-bottom: .75em;
+}
+
+#walmart {
+  background-color: #333;
+  color: #eee;
+  padding-bottom: 10px;
+}
+
+#walmart>h4{
+  margin-bottom: .1em;
+  margin-top: .25em;
+}
+
+#walmart>p{
+  font-size: 100%;
+  margin-top: .25em;
+  margin-bottom: .75em;
+}
+
+@media screen and (max-width: 450px) {
+  h1{
+    font-size: 150%;
+  }
+
+  h3{
+    font-size: 100%;
+  }
+
+  #restaurant>p{
+    font-size: 75%;
+  }
+
 }
