--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,12 @@
 /*Near U - style.css*/
 
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,900);
 
 body{
-  background-color: #111;
+  background-color: #040308;
   color: #eee;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Lato', sans-serif;
+  text-shadow: 1px 1px 1px rgba(150, 150, 150, 0.67);
 }
 
 h1{
@@ -13,10 +14,12 @@ h1{
   margin-bottom: .25em;
   padding-top: 10px;
   font-size: 250%;
+  font-weight: 700;
 }
 
 h2{
   margin-bottom: 0;
+  font-weight: 400;
 }
 
 h3{
@@ -24,10 +27,12 @@ h3{
   margin-bottom: .25em;
   padding-top: 10px;
   font-size: 175%;
+  font-weight: 700;
 }
 
 h4{
   margin-bottom: .25em;
+  font-weight: 400;
 }
 
 header{
@@ -43,7 +48,7 @@ header{
 }
 
 .section{
-  min-height: 200px;
+  min-height: 150px;
   width: 100%;
   margin-bottom: 10px;
   text-align: center;
@@ -67,7 +72,7 @@ header{
 }
 
 #city{
-  background-color: #333;
+  background-color: #09132C;
 }
 
 #city>h1{
@@ -82,11 +87,21 @@ header{
 }
 
 #time{
-  background-color:#333;
+  background-color:#09132C;
 }
 
 #weather{
-  background-color: #333;
+  background-color: #FFCB23;
+}
+
+#weather>h1{
+  margin-top: 0em;
+  margin-bottom: 0em;
+}
+
+#weather>h1+h1{
+  margin-top: 0em;
+  padding-bottom: .25em;
 }
 
 #map{
@@ -94,7 +109,7 @@ header{
 }
 
 #restaurant {
-  background-color: #333;
+  background-color: #BC442C;
   color: #eee;
   padding-bottom: 10px;
 }
@@ -111,8 +126,7 @@ header{
 }
 
 #walmart {
-  background-color: #333;
-  color: #eee;
+  background-color: #702B30;
   padding-bottom: 10px;
 }
 
@@ -127,7 +141,12 @@ header{
   margin-bottom: .75em;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 490px) {
+
+  .section-small{
+    min-height: 100px;
+  }
+
   h1{
     font-size: 150%;
   }
@@ -138,6 +157,10 @@ header{
 
   #restaurant>p{
     font-size: 75%;
+  }
+
+  #walmart{
+    min-height: 100px;
   }
 
 }
