--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,11 @@ h4{
 }
 
 header{
-  height: 5em;
-  background-color: #333;
+  min-height: 150px;
+  background-image: url('../img/header.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   margin-bottom: 10px;
 }
 
